@@ -1,3 +1,11 @@
+2015-09-15  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/gnuk.ld.in (__process3_stack_size__): Increase stack size of
+	GPG thread.
+	(__main_stack_size__): Decrease stack size of exception handlers.
+	(__process1_stack_size__): Decrease stack size of CCID.
+	(__process2_stack_size__): Decrease stack size of RNG.
+
 2015-09-14  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/gnuk.h (LED_GNUK_EXEC): New.
